Update removeLast implementation for JDK 17 support